<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/NameStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="bottom|center"
        android:text="@string/welcome_text"
        android:textColor="#838D32"
        app:fontFamily="@font/roboto_condensed_regular" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/start_pic"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/estatura_text"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="numberDecimal"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ems="10"
        android:gravity="bottom|center"
        android:hint="@string/peso_text"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="@dimen/small_padding" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:background="#58A561"
        android:gravity="center"
        android:padding="@dimen/small_padding"
        android:text="@string/results_but"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>

